force-app/main/default/objects/RE_Email_Recipient__mdt/RE_Email_Recipient__mdt.object-meta.xml
<CustomObject>
    <description>Email recipient for Revolution.</description>
    <label>RE Email Recipient</label>
    <pluralLabel>RE Email Recipients</pluralLabel>
</CustomObject>