force-app/main/default/objects/RE_Email_Recipient__mdt/fields/Bcc_List__c.field-meta.xml
<CustomField>
    <fullName>Bcc_List__c</fullName>
    <label>Bcc List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>