force-app/main/default/objects/RE_Email_Recipient__mdt/fields/Cc_List__c.field-meta.xml
<CustomField>
    <fullName>Cc_List__c</fullName>
    <label>Cc List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>