force-app/main/default/objects/RE_Email_Recipient__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Canada</fullName>
                <default>true</default>
                <label>Canada</label>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>