force-app/main/default/objects/RE_Email_Recipient__mdt/fields/To_List__c.field-meta.xml
<CustomField>
    <fullName>To_List__c</fullName>
    <label>To List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>