force-app/main/default/objects/RE_Email_Recipient__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>7 DAY Canadian Rack Prices</fullName>
            </value>
            <value>
                <fullName>Canada GSAP</fullName>
            </value>
            <value>
                <fullName>Canada Quote Movement</fullName>
            </value>
            <value>
                <fullName>Canadian Rack Prices</fullName>
            </value>
            <value>
                <fullName>Canadian Rack Pricing and rack pricing Files</fullName>
            </value>
            <value>
                <fullName>Internal Rack Notification</fullName>
            </value>
            <value>
                <fullName>Internal Shell Canada BRPP Notification</fullName>
            </value>
            <value>
                <fullName>MY Monthly CBU Costing and Chart</fullName>
            </value>
            <value>
                <fullName>No Revised Pricing</fullName>
            </value>
            <value>
                <fullName>Ready to Upload Notification</fullName>
            </value>
            <value>
                <fullName>SFJ Rack notification</fullName>
            </value>
            <value>
                <fullName>Shell Canada - Branded Customer Notification</fullName>
            </value>
            <value>
                <fullName>Shell Canada Rack Notification</fullName>
            </value>
            <value>
                <fullName>Shell Rack Customer Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>